<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/microtaskTb"
        layout="@layout/microtask_common_header" />

    <TextView
        android:id="@+id/instructionTv"
        style="@style/MicrotaskInstructionText"
        android:text="@string/speech_verification_instruction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/microtaskTb" />

    <FrameLayout
        android:id="@+id/inputFrame"
        style="@style/MicrotaskInputFrame"
        app:layout_constraintBottom_toTopOf="@id/playbackProgress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionTv">

        <TextView
            android:id="@+id/sentenceTv"
            style="@style/MicrotaskInputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="This is a sentence to be recorded" />

    </FrameLayout>

    <include
        android:id="@+id/playbackProgress"
        layout="@layout/microtask_common_playback_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/accuracyCl" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/accuracyCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/qualityCl">

        <TextView
            android:id="@+id/accuracyLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/recording_accuracy"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/accuracyIncorrectBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.20" />

        <Button
            android:id="@+id/accuracyIncorrectBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accuracy_incorrect"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/accuracyLbl"
            app:layout_constraintRight_toLeftOf="@id/accuracyErrorsBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.24" />

        <Button
            android:id="@+id/accuracyErrorsBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accuracy_errors"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/accuracyIncorrectBtn"
            app:layout_constraintRight_toLeftOf="@id/accuracyCorrectBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.23" />

        <Button
            android:id="@+id/accuracyCorrectBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accuracy_correct"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/accuracyErrorsBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.23" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/qualityCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/volumeCl">

        <TextView
            android:id="@+id/qualityLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/recording_quality"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/qualityBadBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.20" />

        <Button
            android:id="@+id/qualityBadBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quality_bad"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/qualityLbl"
            app:layout_constraintRight_toLeftOf="@id/qualityNoisyBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.24" />

        <Button
            android:id="@+id/qualityNoisyBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quality_noisy"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/qualityBadBtn"
            app:layout_constraintRight_toLeftOf="@id/qualityGoodBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.23" />

        <Button
            android:id="@+id/qualityGoodBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quality_good"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/qualityNoisyBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.23" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/volumeCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/fluencyCl">

        <TextView
            android:id="@+id/volumeLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/recording_volume"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/volumeLowBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.20" />

        <Button
            android:id="@+id/volumeLowBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volume_low"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/volumeLbl"
            app:layout_constraintRight_toLeftOf="@id/volumeOkayBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.24" />

        <Button
            android:id="@+id/volumeOkayBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volume_okay"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/volumeLowBtn"
            app:layout_constraintRight_toLeftOf="@id/volumeHighBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.23" />

        <Button
            android:id="@+id/volumeHighBtn"
            style="@style/RatingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volume_high"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/volumeOkayBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.23" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fluencyCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/buttonGroup">

        <TextView
            android:id="@+id/fluencyLbl"
            style="@style/RatingLabel"
            android:gravity="right"
            android:text="@string/recording_fluency"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/fluencyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintLeft_toRightOf="@id/fluencyLbl"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true"
            app:selectionRequired="true">

            <Button
                android:id="@+id/fluencyBad"
                style="@style/RatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fluency_bad" />

            <Button
                android:id="@+id/fluencyOkay"
                style="@style/RatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fluency_okay" />

            <Button
                android:id="@+id/fluencyGood"
                style="@style/RatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fluency_good" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintLeft_toLeftOf="parent">

        <include
            android:id="@+id/backBtnCv"
            layout="@layout/microtask_common_back_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/playBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_speaker_enabled"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/nextBtnCv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/backBtnCv"
            tools:layout_editor_absoluteY="0dp" />

        <include
            android:id="@+id/nextBtnCv"
            layout="@layout/microtask_common_next_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playBtn"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>